--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               </div>
               <div class="col-md-6">
                 <h3 class="mb-4">Terms of service</h3>
-                <p class="mb-4">This service comes as is and without guarantees. It seems to work though. The source code is also open-source and can be found on <a href="https://github.com">Github</a>.
+                <p class="mb-4">This service comes as is and without guarantees. It seems to work though. The source code is also open-source and can be found on <a href="https://github.com/kayalion/discyer">Github</a>.
                 <h3 class="mb-4">Privacy policy</h3>
                 <p class="mb-4">This application does not store any personal data. The access token is kept client-side in memory and is only used to read from the Discogs API.</p>
                 <h3 class="mb-4">Cookie policy</h3>
